--- a/.dvc/.gitignore
+++ b/.dvc/.gitignore
@@ -6319,3 +6319,63 @@
 /config.local
 /tmp
 /cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
