--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aiohttp
 autogluon[all]
 black[jupyter]
 botocore
@@ -10,7 +11,13 @@ hydra_colorlog
 hydra-core
 isort
 joblib
+moviepy
 numpy
+openai
 pandas
+pdf2image
+Pillow
+python-pptx
 scikit-learn
 seaborn
+tenacity
