update pipelines and scripts

--- a/.github/workflows/generate-pdfs.yml
+++ b/.github/workflows/generate-pdfs.yml
@@ -4,7 +4,8 @@ on:
   workflow_dispatch:
   push:
     paths:
-      - "docs/design-document/**"
+      - "docs/design-document/Final_Project_Team_3_Deliverable_1.tex"
+      - "docs/design-document/references.bib"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
