--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-aiohttp
+# aiohttp
 autogluon.tabular[all]
 black[jupyter]
 botocore
@@ -11,14 +11,14 @@ hydra_colorlog
 hydra-core
 isort
 joblib
-moviepy
+# moviepy
 numpy
 openai
 pandas
-pdf2image
-Pillow
-python-pptx
+# pdf2image
+# Pillow
+# python-pptx
 scikit-learn
 seaborn
 tenacity
-vimeo
+# vimeo
