actions zip repo

--- a/.dvc/.gitignore
+++ b/.dvc/.gitignore
@@ -444,3 +444,30 @@
 /config.local
 /tmp
 /cache
+/config.local
+/config.local
+/tmp
+/tmp
+/cache
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/config.local
+/tmp
+/tmp
+/cache
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
